--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,16 @@
 	<div class="total">
 		<div class="leftframe">
 			<img src="../image/mainframe-侧栏.png" alt="left frame" class="image">
-			<div class="sp"></div>
+			<div class="specialbuttondiv">
+				<div class="specialbutton left"></div>
+				<div class="specialbutton center"></div>
+				<div class="specialbutton right"></div>
+			</div>
+            <div class="personaldata">
+				<div class="personaldatadetail personone">test</div>
+				<div class="personaldatadetail persontwo"></div>
+				<div class="personaldatadetail personthree"></div>
+			</div>
 		</div>
 		<div class="rightframe">
 			<img src="../image/mainframe-right.png" alt="right frame" class="image">
