--- a/html/entername.html
+++ b/html/entername.html
@@ -19,6 +19,14 @@
                     <img src="../image/introplayerone.png" >
                 </div>
             </div>
+            <from class="introform">
+                <div class="introenternamediv">
+                    <img src="../image/introentername.png" class="introentername">
+                </div>
+                <input type="text" class="introinput">
+                <input type="submit" class="introbutton">
+            </from>
+            
         </div>
     </body>
 </html>
