--- a/html/entername.html
+++ b/html/entername.html
@@ -10,13 +10,13 @@
             <img src="../image/introbackground.png" class="introflower">
             <!--根據不同使用者要更換不同的照片呦(我先暫定用老奶奶)~~-->
             <div class="intropeoplediv">
-                <img src="../image/intrograndmother.png" class="intropeople">
+                <img src="../image/introredhat.png" class="intropeople">
             </div>
             <!--根據不同使用者要更換不同的照片呦(我暫定先用playerone)~~-->
             <div class="intropeopleworddiv">
                 <img src="../image/go.png" class="intropeoplego">
                 <div class="intropeopleword">
-                    <img src="../image/introplayerone.png" >
+                    <img src="../image/introplayerthree.png" >
                 </div>
             </div>
             <from class="introform">
