:sparkles: Add rules and naming window.

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,16 @@
 		<title>ghost chasing</title>
 		<link href="../style/mainframe.css" rel="stylesheet" type="text/css">
 	</head>
-	<body class="body">
+	<body class="body" onload="Confirm.render()">
+		
+		<div id = "dialogoverlay"></div>
+		<div id = "dialogbox">
+			<div>
+				<div id="dialogboxhead"></div>
+				<div id="dialogboxbody"></div>
+				<div id="dialogboxfoot"></div>
+			</div>
+		</div>
 		<div class="total">
 			<div class="leftframe">
 				<img src="../image/mainframe-侧栏.png" alt="left frame" class="image">
@@ -15,9 +24,18 @@
 					<div class="specialbutton right"></div>
 				</div>
 				<div class="personaldata">
-					<div class="personaldatadetail personone">test</div>
-					<div class="personaldatadetail persontwo"></div>
-					<div class="personaldatadetail personthree"></div>
+					<div class="personaldatadetail personone">
+						<p class="player_name" id="player_name1">Player1</p>
+						<p class="player_count" id="player_count1">Count: 0</p>
+					</div>
+					<div class="personaldatadetail persontwo">
+						<p class="player_name" id="player_name2">Player2</p>
+						<p class="player_count" id="player_count2">Count: 0</p>
+					</div>
+					<div class="personaldatadetail personthree">
+						<p class="player_name" id="player_name3">Player3</p>
+						<p class="player_count" id="player_count3">Count: 0</p>
+					</div>
 				</div>
 			</div>
 			<div class="rightframe">
@@ -40,4 +58,6 @@
 			</div>
 		</div>
 	</body>
+	<script>var exports = {};</script>
+	<script type="text/javascript" src="../scripts/CustomPrompt.js"></script>
 </html>
