:bug: fix counter bug.

--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
 		<div class="total">
 			<div class="leftframe">
 				<img src="../image/mainframe-侧栏.png" alt="left frame" class="image" id="leftbackground">
-				<div class="counter" id="counter"><h1 id="time_counter">60秒</h1></div>
+				<div class="counter" id="counter"><h1 id="time_counter"></h1></div>
 				<div class="specialbuttondiv">
 					<div class="specialbutton left" onclick="startCounDown()"></div>
 					<div class="specialbutton center" onclick="StopTime()"></div>
