add now enternameframe

--- a/html/index.html
+++ b/html/index.html
@@ -5,15 +5,10 @@
 		<title>ghost chasing</title>
 		<link href="../style/mainframe.css" rel="stylesheet" type="text/css">
 	</head>
-	<body class="body" onload="Confirm.render()">
-		
+	<body class="body" onload="Confirm.render()">		
 		<div id = "dialogoverlay"></div>
 		<div id = "dialogbox">
-			<div>
-				<div id="dialogboxhead"></div>
-				<div id="dialogboxbody"></div>
-				<div id="dialogboxfoot"></div>
-			</div>
+			<div id="image"></div>
 		</div>
 		<div class="total">
 			<div class="leftframe">
