--- a/html/index.html
+++ b/html/index.html
@@ -53,8 +53,14 @@
 				<div class="houseandghost four">
 					<img src="../image/church.png" alt="house four" class="image">
 				</div>
-				<div class="houseandghost ghost">
+				<div class="houseandghost ghost" id = "ghost">
 					<img src="../image/ghost.png" alt="ghost" class="image">
+				</div>
+				<div class="houseandghost Player1" id = "Player1">
+					<img src = "../image/spongebob.jpg" alt = "Player1" class = "image">
+				</div>
+				<div class="houseandghost Player2" id = "Player2">
+					<img src = "../image/patrick.png" alt = "Player2" class = "image">
 				</div>
 			</div>
 		</div>
@@ -62,4 +68,5 @@
 	<script>var exports = {};</script>
 	<script type="text/javascript" src="../scripts/CustomPrompt.js"></script>
 	<script type="text/javascript" src="../scripts/Counter.js"></script>
+	<script src = "../scripts/ghost.js"></script>
 </html>
