:bug: fix avatar moving border

--- a/html/index.html
+++ b/html/index.html
@@ -68,5 +68,6 @@
 	<script>var exports = {};</script>
 	<script type="text/javascript" src="../scripts/CustomPrompt.js"></script>
 	<script type="text/javascript" src="../scripts/Counter.js"></script>
-	<script src = "../scripts/ghost.js"></script>
+	<script type="text/javascript" src="../scripts/MoveAvatar.js"></script>
+	<!-- <script src = "../scripts/ghost.js"></script> -->
 </html>
