--- a/html/index.html
+++ b/html/index.html
@@ -48,14 +48,17 @@
 				<div class="houseandghost four">
 					<img src="../image/church.png" alt="house four" class="image">
 				</div>
-				<div class="houseandghost ghost" id = "ghost">
-					<img src="../image/ghost.png" alt="ghost" class="image">
-				</div>
 				<div class="houseandghost Player1" id = "Player1">
-					<img src = "../image/spongebob.jpg" alt = "Player1" class = "image">
+					<img src="../image/ghost.png" alt="Player1" class="image">
+					<figcaption id="p1_fig">Player1</figcaption>
 				</div>
 				<div class="houseandghost Player2" id = "Player2">
-					<img src = "../image/patrick.png" alt = "Player2" class = "image">
+					<img src = "../image/spongebob.jpg" alt = "Player2" class = "image">
+					<figcaption id="p2_fig">Player2</figcaption>
+				</div>
+				<div class="houseandghost Player3" id = "Player3">
+					<img src = "../image/patrick.png" alt = "Player3" class = "image">
+					<figcaption id="p3_fig">Player3</figcaption>
 				</div>
 			</div>
 		</div>
