add final frame and change people size

--- a/html/index.html
+++ b/html/index.html
@@ -35,30 +35,30 @@
 				</div>
 			</div>
 			<div class="rightframe">
-				<img src="../image/mainframe-right.png" alt="right frame" class="image">
-				<div class="houseandghost one">
-					<img src="../image/church.png" alt="house one" class="image">
+				<img src="../image/mainframe-right.png" alt="right frame" class="image" id="rightframebackground">
+				<div class="houseandghost one" style="height:24.5%">
+					<img src="../image/church.png" alt="house one" class="image" style="height:100%;width:100%">
 				</div>
-				<div class="houseandghost two">
-					<img src="../image/church.png" alt="house two" class="image">
+				<div class="houseandghost two" style="height:24.5%">
+					<img src="../image/church.png" alt="house two" class="image"style="height:100%;width:100%">
 				</div>
-				<div class="houseandghost three">
-					<img src="../image/church.png" alt="house three" class="image">
+				<div class="houseandghost three" style="height:24.5%">
+					<img src="../image/church.png" alt="house three" class="image"style="height:100%;width:100%">
 				</div>
-				<div class="houseandghost four">
-					<img src="../image/church.png" alt="house four" class="image">
+				<div class="houseandghost four" style="height:24.5%">
+					<img src="../image/church.png" alt="house four" class="image"style="height:100%;width:100%">
 				</div>
 				<div class="houseandghost Player1" id = "Player1">
 					<img src="../image/gameicon/redhat.png" alt="Player1" class="image">
-					<figcaption id="p1_fig">Player1</figcaption>
+					<figcaption id="p1_fig"style="background-color:grey;color: black;opacity:0.8;">Player1</figcaption>
 				</div>
 				<div class="houseandghost Player2" id = "Player2">
 					<img src = "../image/gameicon/private.png" alt = "Player2" class = "image">
-					<figcaption id="p2_fig">Player2</figcaption>
+					<figcaption id="p2_fig" style="background-color:grey;color: black;opacity:0.8;">Player2</figcaption>
 				</div>
 				<div class="houseandghost Player3" id = "Player3">
 					<img src = "../image/gameicon/grandmother.png" alt = "Player3" class = "image">
-					<figcaption id="p3_fig">Player3</figcaption>
+					<figcaption id="p3_fig" style="background-color:grey;color: black;opacity:0.8;">Player3</figcaption>
 				</div>
 			</div>
 		</div>
