:bug: fix bug on collision and time counting

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
 				<img src="../image/mainframe-侧栏.png" alt="left frame" class="image" id="leftbackground">
 				<div class="counter" id="counter"><h1 id="time_counter"></h1></div>
 				<div class="specialbuttondiv">
-					<div class="specialbutton left" onclick="startCounDown(); GameStart();"></div>
+					<div class="specialbutton left" onclick="GameStart();"></div>
 					<div class="specialbutton center" onclick="StopTime()"></div>
 					<div class="specialbutton right" onclick="ResetTime()"></div>
 				</div>
